--- a/icfp-interpreter/pom.xml
+++ b/icfp-interpreter/pom.xml
@@ -11,4 +11,10 @@
 		<artifactId>icfp-2012-all</artifactId>
 		<version>0.0.1.0-SNAPSHOT</version>
 	</parent>
+	<dependencies>
+		<dependency>
+			<groupId>ru.bosony.icfp-2012</groupId>
+			<artifactId>icfp-model</artifactId>
+		</dependency>
+	</dependencies>
 </project>
