--- a/icfp-interpreter/pom.xml
+++ b/icfp-interpreter/pom.xml
@@ -11,6 +11,25 @@
 		<artifactId>icfp-2012-all</artifactId>
 		<version>0.0.1.0-SNAPSHOT</version>
 	</parent>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>1.2</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>java</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<mainClass>ru.bosony.interpreters.TextInterpreter</mainClass>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 	<dependencies>
 		<dependency>
 			<groupId>ru.bosony.icfp-2012</groupId>
