--- a/pom.xml
+++ b/pom.xml
@@ -32,9 +32,6 @@
 					<source>1.6</source>
 					<target>1.6</target>
 					<encoding>UTF-8</encoding>
-					<fork>true</fork>
-					<meminitial>128m</meminitial>
-					<maxmem>512m</maxmem>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -59,14 +56,19 @@
 				<artifactId>icfp-interpreter</artifactId>
 				<version>${project.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>ru.bosony.icfp-2012</groupId>
+				<artifactId>icfp-solver</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>ru.bosony.icfp-2012</groupId>
+				<artifactId>icfp-submit</artifactId>
+				<version>${project.version}</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 	<dependencies>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-simple</artifactId>
-			<version>${slf4j-simple.version}</version>
-		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -77,5 +79,7 @@
 	<modules>
 		<module>icfp-model</module>
 		<module>icfp-interpreter</module>
+		<module>icfp-solver</module>
+		<module>icfp-submit</module>
 	</modules>
 </project>
